--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <title>Etch-a-Sketch</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<header>
     <h1 class="title">Etch-a-Sketch</h1>
+</header>
+<body>
     <div class="container">
     </div>
     <div class="buttons">
