added background image

--- a/index.html
+++ b/index.html
@@ -10,11 +10,14 @@
     <h1 class="title">Etch-a-Sketch</h1>
 </header>
 <body>
-    <div class="container">
-    </div>
-    <div class="buttons">
-        <br>
-        <button name="reset">Reset</button>
+    <div class="controls">
+        <div class="image">
+            <div class="container"></div>
+        </div>
+        <div class="buttons">
+            <button class="button-item" name="reset">Reset</button>
+            <button class="button-item" name="random">Random</button>
+        </div>
     </div>
 </body>
 <script src="script.js"></script> 
