added shake and random color functionality

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
         </div>
         <div class="buttons">
             <button class="button-item" name="reset">Reset</button>
-            <button class="button-item" name="random">Random</button>
+            <button class="button-item" name="random">Color: Off</button>
+            <button class="button-item" name="shake">Shake!</button>
         </div>
     </div>
 </body>
